# cpp_matrix

./: CMakeLists.txt  Makefile  s21_matrix_oop.h  tests_constuctors.cc  tests_methods_eqmatrix.cc  tests_methods_get_set.cc  tests_methods_multnumber.cc  tests_methods_submatrix.cc  tests_methods_transpose.cc  tests_operators_mul.cc  tests_operators_plus.cc
lib/: s21_calc_complements.cc  s21_determinant.cc  s21_eq_matrix.cc  s21_inverse_matrix.cc  s21_matrix.cc  s21_matrix_overloads.cc  s21_matrix_utils.cc  s21_mul_matrix.cc  s21_mul_number.cc  s21_sub_matrix.cc  s21_sum_matrix.cc  s21_transpose.cc
tests/: func_for_test.cc  tests.h  tests_calccomplements.cc  tests_determinant.cc  tests_methods_eqmatrix.cc  tests_methods_inversematrix.cc  tests_methods_multmatrix.cc  tests_methods_multnumber.cc  tests_methods_submatrix.cc  tests_methods_summatrix.cc  tests_operators_eq.cc  tests_operators_minus.cc
